--- a/agenciaViajesNode/views/viajes.pug
+++ b/agenciaViajesNode/views/viajes.pug
@@ -1,6 +1,6 @@
 extends ./layout/index
 
 block contenido
+  h1.mt-5.text-center #{tituloPagina}
   main.container.mt-5 
-    .row 
-      h1 #{tituloPagina}
+    include ./layout/bloque_viajes
